other page first commiting

--- a/main.css
+++ b/main.css
@@ -317,7 +317,7 @@ hr {
 	align-items: center;
 	justify-content: flex-start;
 	color: var(--mainWhite);
-	font-size: .9rem;
+	font-size: .8rem;
 	font-weight: bold;
 	padding-left: 2px;
 	cursor: pointer;
@@ -949,22 +949,93 @@ hr {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Other Pages (newest) */
 
-#newest_main_div {
+#wrap_div {
 	width: 100%;
-	height: 100rem;
-
+	height: 100%;
+	background: var(--mainGrey);
 }
 
-#newest_first_div {
-	position: static;
-	margin-bottom: -10rem;
+#newest_main_div {
+	width: 85%;
+	padding-top: 10rem;
+	transition: 1s all;
+	transition-timing-function: ease-in-out;
+	margin: 0px auto;
+	background: var(--mainWhite);
+}
+
+.date_other {
+	font-weight: bold;
+	margin: 0px auto;
+	padding: 1rem;
+	text-align: center;
+}
+
+.other_page_hr {
+	width: 97%;
 }
 
 #newest_h2 {
-	margin: 10rem auto;
-	margin-bottom: -10rem;
-	display: block;
-	position: relative;
+	font-size: 2rem;
+	text-align: center;
+	color: var(--mainGrey);
+
+}
+
+em {
+	font-size: 2rem;
+	font-weight: bold;
+	font-style: normal;
+}
+
+#newest_p {
+	color: var(--mainGrey);
+	overflow-wrap: normal;
+	padding: 1rem;
+	font-size: 1.3rem;
+	line-height: 2.5rem;
+}
+
+#newest_img {
+	float: right;
+	padding: 1rem;
+}
+
+.likes, .comments {
+	padding: 1rem;
+	font-size: 1.2rem;
+}
+
+.likes {
+	margin-left: 1.5rem;
+}
+
+
+.comments {
+	margin-right: 2rem;
+	margin-top: -1rem;
+}
+
+.fa-thumbs-down {
+	margin-left: 1.2rem;
+}
+
+.comments {
+	float: right;
 }
